--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <title>Hybrid Trainer</title>
     <style>
       * { box-sizing: border-box; }
-      body { margin: 0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background: #f7f7fb; color: #111827; }
-      .btn { padding: .5rem 1rem; border-radius: 1rem; border: 0; cursor: pointer; background: #111827; color: #fff; }
-      .btn.secondary { background: #374151; }
-      .btn.danger { background: #dc2626; }
-      .pill { padding: .25rem .75rem; border-radius: 9999px; background: #f3f4f6; font-size: .75rem; font-weight: 600; margin-right: .5rem; display: inline-block; }
-      .card { border-radius: 1rem; background: white; padding: 1rem; box-shadow: 0 1px 3px rgba(0,0,0,.06), 0 1px 2px rgba(0,0,0,.05); }
-      header { position: sticky; top: 0; backdrop-filter: blur(8px); background: rgba(255,255,255,.7); border-bottom: 1px solid #e5e7eb; z-index: 10; }
-      .tabs button { margin-left: .5rem; }
-      #metricsChart, #macroChart, #volumeChart { width: 100%; height: 280px; }
+      body { margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background:#f7f7fb; color:#111827; }
+      .btn { padding:.5rem 1rem; border-radius:1rem; border:0; cursor:pointer; background:#111827; color:#fff; }
+      .btn.secondary { background:#374151; }
+      .btn.danger { background:#dc2626; }
+      .pill { padding:.25rem .75rem; border-radius:9999px; background:#f3f4f6; font-size:.75rem; font-weight:600; margin-right:.5rem; display:inline-block; }
+      .card { border-radius:1rem; background:white; padding:1rem; box-shadow:0 1px 3px rgba(0,0,0,.06), 0 1px 2px rgba(0,0,0,.05); }
+      header { position:sticky; top:0; backdrop-filter:blur(8px); background:rgba(255,255,255,.7); border-bottom:1px solid #e5e7eb; z-index:10; }
+      .tabs button { margin-left:.5rem; }
+      .flex { display:flex; } .items-center { align-items:center; } .justify-between { justify-content:space-between; }
+      .grid { display:grid; } .text-gray-600{color:#4b5563;} .text-gray-500{color:#6b7280;}
     </style>
   </head>
   <body>
@@ -27,7 +28,7 @@
           <div style="width:36px;height:36px;display:grid;place-items:center;border-radius:12px;background:black;color:white;font-weight:700;">HC</div>
           <div>
             <div style="font-weight:600;">Hybrid Trainer</div>
-            <div style="font-size:12px;color:#4b5563;">Calisthenics • Weights • Running • Nutrition</div>
+            <div class="text-gray-600" style="font-size:12px;">Calisthenics • Weights • Running • Nutrition</div>
           </div>
         </div>
         <div class="tabs">
@@ -55,6 +56,7 @@
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <!-- Framer Motion is optional; app has a graceful fallback -->
     <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <script src="./app.js"></script>
